--- a/wordpress-product-price.css
+++ b/wordpress-product-price.css
@@ -1,38 +1,40 @@
 
-.saletable {
+.saletable .saletabletr .saletabletd {
 	border: 0px;
 }
-.saletabletr {
-	border: 0px;
-}
-.saletabletd {
-	border: 0px;
-}
-
 
 .sale_percent {
+	font-family: Ultra;
 	font-size:0.7em;
 	color:lightgreen;
+	text-shadow: 2px 2px 5px black;
 }
 
 .sale_txt {
+	font-family: Ultra;
 	font-size:0.7em;
 	color:green;
+	text-shadow: 2px 2px 5px black;
 }
 
 .norm_price_strike {
+	font-family: MuseoModerno;
 	font-size:0.8em;
 	color:red;
 	text-decoration: line-through;
+	text-shadow: 2px 2px 5px black;
 }
 
 .norm_price {
+	font-family: MuseoModerno;
 	font-size:1.4em;
-	color:darkgreen;
+	color:green;
+	text-shadow: 2px 2px 5px black;
 }
 
 .sale_price {
+	font-family: Ultra;
 	font-size:1.7em;
-	color:green;
+	color:lightgreen;
+	text-shadow: 2px 2px 5px black;
 }
-
